[package]
name = "yassg"
version = "0.2.0"
authors = ["Rafał Baran <rafal06@duck.com>"]
edition = "2021"
description = "Yet another (another) (simple) static site generator"
readme = "README.md"
homepage = "https://github.com/rafal06/yassg"
repository = "https://github.com/rafal06/yassg"
license = "MIT"
keywords = ["web", "site-generator", "simple", "ssg"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"

log = "0.4.19"
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"

hotwatch = "0.5.0"
